# bananadeck

./: .env  .gitignore  App.tsx  README.md  index.html  metadata.json  package-lock.json  package.json  pyproject.toml  types.ts
bananadeck/backend/: expand_slide_example.py  input2md.py  main.py  md2ppt_skeleton.py  md2skeleton.py  ppt_skeleton2slides.py  server.py  skeleton2slides.py  slides_redo.py
bananadeck/frontend/: App.tsx
bananadeck/frontend/components/: FileUpload.tsx  Loader.tsx
bananadeck/frontend/components/icons/: ChevronLeftIcon.tsx  YoutubeIcon.tsx
bananadeck/frontend/services/: geminiService.ts
basic_backend/: api.ts  geminiService.ts  package-lock.json  package.json  types.ts
components/: ExpansionBreadcrumb.tsx  ExpansionIndicator.tsx  ExpansionTypeSelector.tsx  FileUpload.tsx  Loader.tsx  Placeholder.tsx  Slide.tsx  SlideCanvas.tsx  Slideshow.tsx
components/icons/: ChevronRightIcon.tsx  CloseIcon.tsx  FileIcon.tsx  PresentationIcon.tsx  ProcessingIcon.tsx
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/Canvas/: MainCanvas.tsx
frontend/src/components/FileInput/: FileInput.tsx
frontend/src/components/Progress/: LoadingIndicator.tsx  ProgressBar.tsx
frontend/src/components/SlideShape/: SlideShape.tsx
frontend/src/components/UrlInput/: UrlInput.tsx
frontend/src/store/: progressStore.ts  slidesStore.ts
frontend/src/types/: index.ts
services/: geminiService.ts
