[project]
name = "bananadeck"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.116.1",
    "google-genai>=1.33.0",
    "pillow>=11.3.0",
    "uvicorn>=0.35.0",
    "youtube-transcript-api>=0.6.0",
]
